git-pages settings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gueshjose.github.io/Projet_Pong_Josese",
+  "homepage": "http://gueshjose.github.io/rock_paper_scissor_jose",
   "name": "rock_paper_scissor",
   "version": "0.1.0",
   "private": true,
